# halloy-themes

./: .env.development  .gitignore  Cargo.toml  README.md  drizzle.config.dev.ts  drizzle.config.ts  justfile  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
docker/: docker-compose.yaml
migrations/: 0000_init.sql  0001_seed-builtin-themes.sql  0002_alter-theme.sql  0003_submissions.sql
migrations/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  _journal.json
src/: app.css  app.d.ts  app.html  hooks.server.ts
src/lib/: color.ts  index.ts  notification.ts  submission.ts  theme-search-context.ts  theme.ts  types.ts
src/lib/components/: Navigation.svelte  Window.svelte
src/lib/db/: index.ts  schema.ts
src/lib/types/: theme.ts
src/routes/: +error.svelte  +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte  +page.ts
src/routes/admin/: +error.svelte  +layout.server.ts  +page.server.ts  +page.svelte
src/routes/admin/json/[slug]/: +page.server.ts  +page.svelte
src/routes/admin/login/: +page.server.ts  +page.svelte
src/routes/admin/submissions/: +page.server.ts
src/routes/api/decode/: +server.ts
src/routes/api/list/: +server.ts
src/routes/api/submit/: +server.ts
src/routes/help/: +page.svelte
src/routes/submit/: +page.server.ts  +page.svelte
